# CANDIDATES2023

./: .gitignore  .gitmodules  README.md  readme.md
code/: .mxproject  CMakeLists.txt  Makefile  README.md  mrcheese.ioc  readme.md
code/Core/Inc/: main.h  stm32f1xx_it.h
code/Core/Inc/Backup/: main.h.bak  stm32f1xx_it.h.bak
code/Core/Inc/sensors/: MPU6050.h  TCS3200.h
code/Core/Src/: freertos.c  gpio.c  i2c.c  main.c  stm32f1xx_hal_msp.c  stm32f1xx_it.c  tim.c  usart.c
code/Core/Src/Backup/: freertos.c.bak  gpio.c.bak  i2c.c.bak  main.c.bak  stm32f1xx_it.c.bak  tim.c.bak
code/Core/Src/sensors/: MPU6050.c  TCS3200.c
